5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1716_2498.log
== TEST (2019-05-15 12:35:39) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos=0
while(a >= b):
	acres = a * b/100
	a = a + acres
	a = a - c
	b = b - d
	anos = anos + 1
print(anos)	
	
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:36:41) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos=0
while(a >= b):
	acres = a * b/100
	a = a + acres
	anos = anos + 1
print(anos)	
	
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:37:04) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos=0
while(a >= b):
	acres = a * b/100
	a = a + acres
	anos = anos + 1
print(anos)	
	
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:41) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos=0
while(a >= b):
	acres = a * b/100
	a = a + acres
	anos = anos + 1
print(anos)	
	
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:41) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos = 0
while(a >= b):
	acres = a * b/100
	a = a + acres
	anos = anos + 1
if(a < b and c > d)	
	print(anos)	
print(anos)	
	
	

-- ERROR:
File "XXXX", line 10
    if(a < b and c > d)	
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:32:39) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos = 0
while(a >= b and a < b and c > d):
	acres = a * b/100
	a = a + acres
	anos = anos + 1	
print(anos)	
	
	

-- ERROR:
File "XXXX", line 10
    if(a < b and c > d)	
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:49:56) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos = 0
while(a >= b and a < b and c > d):
	a = a+(a * (c/100))
	b = b+(b * (d/100))
	anos = anos + 1	
print(anos)	
	
	

-- ERROR:
File "XXXX", line 10
    if(a < b and c > d)	
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:51:11) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos = 0
while(a < b):
	a = a+(a * (c/100))
	b = b+(b * (d/100))
	anos = anos + 1	
print(anos)	
	
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:51:31) 
-- CODE:
a=int(input("numero de habitantes A: "))
b=int(input("numero de habitantes B: "))
c=float(input("percentual de crescimento A: "))
d=float(input("percentual de crescimento B: "))
anos = 0
while(a < b):
	a = a+(a * (c/100))
	b = b+(b * (d/100))
	anos = anos + 1	
print(anos)	
	
	

-- EXECUTION TIME:
0.212656
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:07:40) 
-- CODE:
a=int(input("numero habitantes A: "))
b=int(input("numero habitantes B: "))
c=float(input("crescimento A: "))
d=float(input("crescimento B: "))
anos=0
while(a<b):
	a=a+a*(c/100)
	b=b+b*(d/100)
	anos=anos+1
print(anos)	
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:08:17) 
-- CODE:
a=int(input("numero habitantes A: "))
b=int(input("numero habitantes B: "))
c=float(input("crescimento A: "))
d=float(input("crescimento B: "))
anos=0
while(a<b):
	a=a+a*(c/100)
	b=b+b*(d/100)
	anos=anos+1
print(anos)	
	

-- EXECUTION TIME:
0.222927
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
